CSS responsive - Style완

--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영화 콜렉션</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="headImgContainer">
-                <img src="" alt="">
+                <img src="/img/문희는영화보고싶은데-headerTitle.jpg" alt="">
             </div>
-            <h1>문희는 영화가 보고찌푼뎅😃</h1>
+            <h1>는 영화가 보고찌푼뎅😃</h1>
         </header>
         <form action="">
             <label for="search_movie">
-                문희의 최애의 영화는??
+                문희의 최애의 영화는
             </label>
-            <input type="text" placeholder="포도는 아닐꺼잖냐..." id="search_movie">
-            <button id="serach_btn">검색</button>
+            <div class="search-container">
+                <input type="text" placeholder="포도는 아닐꺼잖냐..." id="search_movie">
+                <button id="serach_btn">검색</button>
+            </div>
         </form>
         <section class="card-container">
             <div class="card">
                 <div class="card-imgBox">
-                    <img src="" alt="">
+                    <img src="/img/호박고구마-card-img-Sample.jpg" alt="">
                 </div>
                 <div class="card-head">
-                    <h4 class="card-title"></h4>
+                    <h4 class="card-title">호박고구마!!!</h4>
                 </div>
                 <div class="card-body">
                     <p class="card-text">
@@ -34,7 +37,39 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <p class="movie-rating"></p>
+                    <p class="movie-rating">Rating</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-imgBox">
+                    <img src="/img/호박고구마-card-img-Sample.jpg" alt="">
+                </div>
+                <div class="card-head">
+                    <h4 class="card-title">호박고구마!!!</h4>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis rem iste quia provident incidunt aliquid repellat magni, ipsam consequatur ut officia quibusdam, dolore ipsa iure ipsum! Veniam voluptates nihil error!
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <p class="movie-rating">Rating</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-imgBox">
+                    <img src="/img/호박고구마-card-img-Sample.jpg" alt="">
+                </div>
+                <div class="card-head">
+                    <h4 class="card-title">호박고구마!!!</h4>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis rem iste quia provident incidunt aliquid repellat magni, ipsam consequatur ut officia quibusdam, dolore ipsa iure ipsum! Veniam voluptates nihil error!
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <p class="movie-rating">Rating</p>
                 </div>
             </div>
         </section>
