--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영화 콜렉션</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -14,7 +15,7 @@
             </div>
             <h1>는 영화가 보고찌푼뎅😃</h1>
         </header>
-        <form action="">
+        <div class="form-control">
             <label for="search_movie">
                 문희의 최애의 영화는
             </label>
@@ -22,56 +23,8 @@
                 <input type="text" placeholder="포도는 아닐꺼잖냐..." id="search_movie">
                 <button id="serach_btn">검색</button>
             </div>
-        </form>
+        </div>
         <section class="card-container">
-            <div class="card">
-                <div class="card-imgBox">
-                    <img src="/img/호박고구마-card-img-Sample.jpg" alt="">
-                </div>
-                <div class="card-head">
-                    <h4 class="card-title">호박고구마!!!</h4>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis rem iste quia provident incidunt aliquid repellat magni, ipsam consequatur ut officia quibusdam, dolore ipsa iure ipsum! Veniam voluptates nihil error!
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="movie-rating">Rating</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-imgBox">
-                    <img src="/img/호박고구마-card-img-Sample.jpg" alt="">
-                </div>
-                <div class="card-head">
-                    <h4 class="card-title">호박고구마!!!</h4>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis rem iste quia provident incidunt aliquid repellat magni, ipsam consequatur ut officia quibusdam, dolore ipsa iure ipsum! Veniam voluptates nihil error!
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="movie-rating">Rating</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-imgBox">
-                    <img src="/img/호박고구마-card-img-Sample.jpg" alt="">
-                </div>
-                <div class="card-head">
-                    <h4 class="card-title">호박고구마!!!</h4>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis rem iste quia provident incidunt aliquid repellat magni, ipsam consequatur ut officia quibusdam, dolore ipsa iure ipsum! Veniam voluptates nihil error!
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="movie-rating">Rating</p>
-                </div>
-            </div>
         </section>
     </div>
 </body>
