--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section class="card-container">
             
         </section>
+        <section class="content"></section>
     </div>
 </body>
 </html>
