img안보여서 경로 설정 다시 함

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <div class="headImgContainer">
-                <img src="/img/문희는영화보고싶은데-headerTitle.jpg" alt="">
+                <img src="./img/문희는영화보고싶은데-headerTitle.jpg" alt="">
             </div>
             <h1>는 영화가 보고찌푼뎅😃</h1>
         </header>
